# FSSE_Oct24_GroupC_GFP_Backend

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  app.py  conftest.py  docker-compose.yaml  env  main.py  pyproject.toml  requirements.txt  test_redis.py
config/: base.py  config.py  mail_config.py  settings.py  testing.py
instance/: database.py  local.db  test.db
logs/: topup_requests.csv
models/: __init__.py  cart.py  cart_item.py  category.py  feedback.py  notification.py  order.py  order_item.py  product.py  product_category.py  product_image.py  user.py  voucher.py  wishlist_item.py
repo/: cart_item_repo.py  cart_repo.py  category_repo.py  feedback_repo.py  notification_repo.py  order_repo.py  product_category_repo.py  product_image_repo.py  product_repo.py  user_repo.py  wishlist_repo.py
route/: auth_route.py  cart_route.py  categories_route.py  category_route.py  error_handlers.py  feedback_route.py  index.py  notification_route.py  order_route.py  product_category_routes.py  product_image_route.py  product_route.py  subscription_route.py  voucher_route.py  wishlist_route.py
scripts/: seed_products.py
services/: cart_item_services.py  cart_services.py  category_service.py  feedback_services.py  notification_services.py  order_services.py  product_category_services.py  product_image_services.py  product_services.py  subscription_services.py  user_services.py  wishlist_services.py
shared/: auth.py  auth_helpers.py  cache.py  limiter.py  redis_check.py  test_helpers.py
tests/: test_cart.py  test_category.py  test_feedback.py  (+9 more)
(+23 files in other folders)
